[gd_scene load_steps=12 format=2]

[ext_resource path="res://scenes/Level/Level.gd" type="Script" id=1]
[ext_resource path="res://sprites/proxy/20220923163826_00003_zombie_scientists_doing_research_intricate_digital_painting_by_Akihiko_Yoshida_Ilya_Kuvshinov_Greg_Rutkowski.png" type="Texture" id=2]
[ext_resource path="res://fonts/Titilium/TitilliumWeb-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://sprites/proxy/20220923163826_00002_zombie_scientists_doing_research_intricate_digital_painting_by_Akihiko_Yoshida_Ilya_Kuvshinov_Greg_Rutkowski.png" type="Texture" id=4]
[ext_resource path="res://scenes/Card/Card.tscn" type="PackedScene" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0.784314 )
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="DynamicFont" id=2]
size = 56
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=5]
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxEmpty" id=6]

[node name="Level" type="Node2D"]
script = ExtResource( 1 )
Card = ExtResource( 5 )

[node name="rooms" type="Node2D" parent="."]

[node name="main" type="Node2D" parent="rooms"]

[node name="background" type="Sprite" parent="rooms/main"]
scale = Vector2( 2.143, 2.143 )
texture = ExtResource( 4 )
centered = false

[node name="frame" type="RichTextLabel" parent="rooms/main"]
margin_left = 64.0
margin_top = 192.0
margin_right = 1200.0
margin_bottom = 888.0
custom_styles/normal = SubResource( 1 )

[node name="title" type="RichTextLabel" parent="rooms/main"]
margin_left = 80.0
margin_top = 208.0
margin_right = 1184.0
margin_bottom = 296.0
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "Main Estate"
text = "Main Estate"

[node name="description" type="RichTextLabel" parent="rooms/main"]
margin_left = 80.0
margin_top = 296.0
margin_right = 1184.0
margin_bottom = 384.0
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "Headquarters of your operation"
text = "Headquarters of your operation"

[node name="lab" type="Node2D" parent="rooms"]
visible = false

[node name="background" type="Sprite" parent="rooms/lab"]
scale = Vector2( 2.143, 2.143 )
texture = ExtResource( 2 )
centered = false

[node name="frame" type="RichTextLabel" parent="rooms/lab"]
margin_left = 64.0
margin_top = 192.0
margin_right = 1200.0
margin_bottom = 888.0
custom_styles/normal = SubResource( 1 )

[node name="title" type="RichTextLabel" parent="rooms/lab"]
margin_left = 80.0
margin_top = 208.0
margin_right = 1184.0
margin_bottom = 296.0
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "Research Lab"
text = "Research Lab"

[node name="description" type="RichTextLabel" parent="rooms/lab"]
margin_left = 80.0
margin_top = 296.0
margin_right = 1184.0
margin_bottom = 384.0
custom_fonts/normal_font = SubResource( 3 )
bbcode_text = "Research more powerfull stuff"
text = "Research more powerfull stuff"

[node name="room_navigation" type="Node2D" parent="."]

[node name="frame" type="RichTextLabel" parent="room_navigation"]
margin_left = 64.0
margin_top = 64.0
margin_right = 1200.0
margin_bottom = 152.0
custom_styles/normal = SubResource( 1 )

[node name="buttons" type="Node2D" parent="room_navigation"]

[node name="Button1" type="Button" parent="room_navigation/buttons"]
margin_left = 80.0
margin_top = 80.0
margin_right = 200.0
margin_bottom = 136.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "main"

[node name="Button2" type="Button" parent="room_navigation/buttons"]
margin_left = 208.0
margin_top = 80.0
margin_right = 328.0
margin_bottom = 136.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "lab"

[node name="Button3" type="Button" parent="room_navigation/buttons"]
margin_left = 336.0
margin_top = 80.0
margin_right = 456.0
margin_bottom = 136.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "audit"

[node name="Button4" type="Button" parent="room_navigation/buttons"]
margin_left = 464.0
margin_top = 80.0
margin_right = 584.0
margin_bottom = 136.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "pub"

[node name="bottom_navigation" type="Node2D" parent="."]

[node name="frame" type="RichTextLabel" parent="bottom_navigation"]
margin_left = 64.0
margin_top = 960.0
margin_right = 1856.0
margin_bottom = 1048.0
custom_styles/normal = SubResource( 1 )

[node name="buttons" type="Node2D" parent="bottom_navigation"]

[node name="to_menu" type="Button" parent="bottom_navigation/buttons"]
margin_left = 1720.0
margin_top = 976.0
margin_right = 1840.0
margin_bottom = 1032.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "menu"

[node name="roster" type="Node2D" parent="."]

[node name="frame" type="RichTextLabel" parent="roster"]
margin_left = 1408.0
margin_top = 64.0
margin_right = 1856.0
margin_bottom = 896.0
custom_styles/normal = SubResource( 1 )

[node name="ScrollContainer" type="ScrollContainer" parent="roster"]
margin_left = 1432.0
margin_top = 128.0
margin_right = 1844.0
margin_bottom = 888.0
custom_styles/bg = SubResource( 6 )

[node name="GridContainer" type="GridContainer" parent="roster/ScrollContainer"]
custom_constants/vseparation = 15

[connection signal="pressed" from="room_navigation/buttons/Button1" to="." method="_on_Button1_pressed"]
[connection signal="pressed" from="room_navigation/buttons/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="bottom_navigation/buttons/to_menu" to="." method="_on_to_menu_pressed"]
